--- a/cookbook/mkdocs.yml
+++ b/cookbook/mkdocs.yml
@@ -1,9 +1,11 @@
 site_name: Cookbook for managing Kuberenetes clusters with IBM Multicloud Manager
 nav:
   - Home: index.md
+  - Quick Start: quickstart.md
   - Scenarios for multi-cluster management: multicloud_scenarios.md
   #- Quick Start: quickstart.md
   #- Architecting MCM Solution: solutionarchitecture.md
+  - MCM Applications: mcm-applications.md
   - DevOps with MCM: devops-mcm.md
   - Policy and Compliance: policy.md
   #- Multicloud management with CAM: cam-integration.md
