- Renamed some files in the gbapp chart to a more consistent scheme

--- a/cookbook/docs/demos/guestbook/gbapp/templates/application.yaml
+++ b/cookbook/docs/demos/guestbook/gbapp/templates/application.yaml
@@ -14,7 +14,7 @@ spec:
     - key: app
       operator: In
       values:
-      - guestbook
+      - gbapp
       - gbf
       - gbrm
       - gbrs
