--- a/cookbook/docs/demos/guestbook/gbapp/templates/redismaster-placement-binding.yaml
+++ b/cookbook/docs/demos/guestbook/gbapp/templates/redismaster-placement-binding.yaml
@@ -1,5 +1,5 @@
 apiVersion: mcm.ibm.com/v1alpha1
-kind: Deployable
+kind: PlacementBinding
 metadata:
   name: {{ template "guestbookapplication.fullname" . }}-redismaster
   labels:
@@ -9,9 +9,11 @@ metadata:
     heritage: {{ .Release.Service }}
     name: {{ template "guestbookapplication.fullname" . }}-redismaster
     servicekind: CacheService
-spec:
-  deployer:
-    kind: helm
-    helm:
-      chartURL: https://raw.githubusercontent.com/abdasgupta/helm-repo/master/3.1-mcm-guestbook/gbrm-0.1.0.tgz
-      namespace: {{ .Values.appInClusterNamespace }}
+placementRef:
+  apiGroup: mcm.ibm.com
+  kind: PlacementPolicy
+  name: {{ template "guestbookapplication.fullname" . }}-redismaster
+subjects:
+- apiGroup: mcm.ibm.com
+  kind: Deployable
+  name: {{ template "guestbookapplication.fullname" . }}-redismaster
