--- a/cookbook/docs/demos/guestbook/gbapp/templates/redisslave-deployable.yaml
+++ b/cookbook/docs/demos/guestbook/gbapp/templates/redisslave-deployable.yaml
@@ -13,5 +13,5 @@ spec:
   deployer:
     kind: helm
     helm:
-      chartURL: https://raw.githubusercontent.com/abdasgupta/helm-repo/master/3.1-mcm-guestbook/gbrs-0.1.0.tgz
+      chartURL: {{ .Values.chartRepoURL }}/gbrs-0.1.0.tgz
       namespace: {{ .Values.appInClusterNamespace }}
