--- a/cookbook/docs/demos/guestbook/gbapp/templates/redisslave-frontend-relationship.yaml
+++ b/cookbook/docs/demos/guestbook/gbapp/templates/redisslave-frontend-relationship.yaml
@@ -1,17 +1,17 @@
 apiVersion: mcm.ibm.com/v1alpha1
 kind: ApplicationRelationship
 metadata:
-  name: {{ template "guestbookapplication.fullname" . }}-appfrontend
+  name: {{ template "guestbookapplication.fullname" . }}-redisslave-frontend
   labels:
     app: {{ template "guestbookapplication.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
+  type: usesCreated
+  source:
+    kind: Deployable
+    name: {{ template "guestbookapplication.fullname" . }}-redisslave
   destination:
     kind: Deployable
-    name: {{ template "guestbookapplication.fullname" . }}
-  source:
-    kind: Application
-    name: {{ template "guestbookapplication.fullname" . }}
-  type: contains
+    name: {{ template "guestbookapplication.fullname" . }}-frontend
