- New docker image based on ICP and MCM 3.1.2

--- a/cookbook/docs/demos/docker/Dockerfile
+++ b/cookbook/docs/demos/docker/Dockerfile
@@ -1,12 +1,12 @@
 # NOTE: This image is for DEMO purposes!!!
 FROM alpine
 
-# bash, jq
-RUN apk add --update curl bash jq ca-certificates
+# bash
+RUN apk add --update bash jq curl ca-certificates openssl
 
 # kubectl
 # From https://github.com/lachie83/k8s-kubectl/blob/master/Dockerfile
-ENV KUBE_LATEST_VERSION="v1.12.0"
+ENV KUBE_LATEST_VERSION="v1.12.4"
 
 RUN apk add --update ca-certificates \
  && apk add --update -t deps \
@@ -34,6 +34,6 @@ ADD cloudctl /usr/local/bin/cloudctl
 RUN chmod +x /usr/local/bin/cloudctl
 
 # mcmctl
-# From https://www.ibm.com/support/knowledgecenter/en/SSBS6K_3.1.2/mcm/installing/install.html
+# From https://www.ibm.com/support/knowledgecenter/en/SSBS6K_3.1.2/mcm/installing/install.html#install_cli
 ADD mcmctl /usr/local/bin/mcmctl
 RUN chmod +x /usr/local/bin/mcmctl
