--- a/cookbook/docs/demos/jenkins/deploy/jenkins-ingress.yaml
+++ b/cookbook/docs/demos/jenkins/deploy/jenkins-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  namespace: devops-mcm-demo
+  namespace: mcm-devops-demo
   name: jenkins-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
