--- a/cookbook/docs/demos/jenkins/Jenkinsfile
+++ b/cookbook/docs/demos/jenkins/Jenkinsfile
@@ -166,18 +166,21 @@ podTemplate(label: podLabel, envVars: [
                 else
                     echo "Getting Ingress URL"
                     URL=`get_ingress`
-                    until [ -n "\${URL}" ]; do
+                    echo "Ingress: http://\${URL}"
+
+                    until [ -n "\${URL}" ] && [ "\${URL}" -ne "80" ]; do
                         echo "Waiting for Ingress to become available..."
                         sleep 1
                         URL=`get_ingress`
+                        echo "Ingress: http://\${URL}"
                     done
                 fi
 
-                echo "Testing Service on Cluster at \${URL}"
+                echo "Testing Service on Cluster at http://\${URL}"
                 CURL_OUTPUT=`test_service`
 
                 until [ -n "\${CURL_OUTPUT}" ]; do
-                    echo "Getting the home page from \${URL}"
+                    echo "Getting the home page from http://\${URL}"
                     sleep 1
                     CURL_OUTPUT=`test_service`
                 done
