- Updated compliance chapter to work with MCM 3.1.2

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ resources/.arch-internal-preview.css
 cookbook/site
 cookbook/docs/demos/docker/cloudctl
 cookbook/docs/demos/docker/mcmctl
+*.html
